--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,9 @@ variables:
   DOCKER_HUB: "true"
   # Override CI_PROJECT_PATH for using correct DOCKERHUB path
   CI_PROJECT_PATH: "fabianbees/openvpn-as"
-
+  OPENVPNAS_VERSION: ""
+  VERSION: "2.9.1"
+  BUILD_DATE: ""
 
 # Build Stages
 stages:
@@ -20,6 +22,9 @@ stages:
   image: $CI_BUILD_IMAGE
   stage: build
   before_script:
+    - |
+      export OPENVPNAS_VERSION=$(curl -sX GET http://as-repository.openvpn.net/as/debian/dists/bionic/main/binary-amd64/Packages.gz | gunzip -c | grep -A 7 -m 1 'Package: openvpn-as' | awk -F ': ' '/Version/{print $2;exit}')
+      export BUILD_DATE=$(date '+%Y-%m-%dT%H:%M:%S%:z')
     - |
       if [[ -z "$CI_COMMIT_TAG" ]]; then
         export CI_APPLICATION_TAG="latest"
@@ -44,7 +49,7 @@ build:amd64:
   tags:
     - amd64
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" 
 
 
@@ -57,7 +62,7 @@ build:arm64:
   tags:
     - arm64
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64"
 
 
@@ -70,7 +75,7 @@ build:armv7:
   tags:
     - armv7
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7"
 
 
@@ -80,9 +85,11 @@ build:manifest:
   extends: .build
   stage: release
   script:
-    - echo "Checking amd86 build..." && [[ $CI_BUILD_AMD64 ]] && echo "found" && export CI_MANIFEST_LIST="$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64"
-    - echo "Checking arm64 build..." && [[ $CI_BUILD_ARM64 ]] && echo "found" && export CI_MANIFEST_LIST="$CI_MANIFEST_LIST $CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64"
-    - echo "Checking arm build..." && [[ $CI_BUILD_ARMv7 ]] && echo "found" && export CI_MANIFEST_LIST="$CI_MANIFEST_LIST $CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7"
+    - echo "Checking amd86 build..." && [[ $CI_BUILD_AMD64 ]] && echo "found" && export CI_MANIFEST_LIST="$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" && export CI_MANIFEST_LIST_VERSION="$CI_REGISTRY_IMAGE:$VERSION-amd64"
+    - echo "Checking arm64 build..." && [[ $CI_BUILD_ARM64 ]] && echo "found" && export CI_MANIFEST_LIST="$CI_MANIFEST_LIST $CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" && echo "found" && export CI_MANIFEST_LIST_VERSION="$CI_MANIFEST_LIST_VERSION $CI_REGISTRY_IMAGE:$VERSION-arm64"
+    - echo "Checking arm build..." && [[ $CI_BUILD_ARMv7 ]] && echo "found" && export CI_MANIFEST_LIST="$CI_MANIFEST_LIST $CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" && export CI_MANIFEST_LIST_VERSION="$CI_MANIFEST_LIST_VERSION $CI_REGISTRY_IMAGE:$VERSION-armv7"
     - export DOCKER_CLI_EXPERIMENTAL=enabled
     - echo $CI_MANIFEST_LIST
+    - echo $CI_MANIFEST_LIST_VERSION
+    - docker manifest create $CI_REGISTRY_IMAGE:$VERSION $CI_MANIFEST_LIST_VERSION && docker manifest push $CI_REGISTRY_IMAGE:$VERSION
     - docker manifest create $CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG $CI_MANIFEST_LIST && docker manifest push $CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG
