--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   CI_BUILD_IMAGE: "docker:latest"
   CI_BUILD_AMD64: "enabled"
-  CI_BUILD_ARM64: "enabled"
+  CI_BUILD_ARM64: ""
   CI_BUILD_ARMv7: ""
   # For using DOCKER_HUB as registry, set this Var to "true"
   DOCKER_HUB: "true"
@@ -22,9 +22,7 @@ stages:
   image: $CI_BUILD_IMAGE
   stage: build
   before_script:
-    - |
-      export OPENVPNAS_VERSION=$(curl -sX GET http://as-repository.openvpn.net/as/debian/dists/bionic/main/binary-amd64/Packages.gz | gunzip -c | grep -A 7 -m 1 'Package: openvpn-as' | awk -F ': ' '/Version/{print $2;exit}')
-      export BUILD_DATE=$(date '+%Y-%m-%dT%H:%M:%S%:z')
+    - export BUILD_DATE=$(date '+%Y-%m-%dT%H:%M:%S%:z')
     - |
       if [[ -z "$CI_COMMIT_TAG" ]]; then
         export CI_APPLICATION_TAG="latest"
@@ -50,7 +48,8 @@ build:amd64:
     - amd64
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
-    - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" 
+    - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64"
+    - docker push "$CI_REGISTRY_IMAGE:$VERSION-amd64"
 
 
 # ARM64 Build
@@ -62,8 +61,9 @@ build:arm64:
   tags:
     - arm64
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" -t "$CI_REGISTRY_IMAGE:$VERSION-arm64" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64"
+    - docker push "$CI_REGISTRY_IMAGE:$VERSION-arm64"
 
 
 # ARMv7 Build
@@ -75,8 +75,9 @@ build:armv7:
   tags:
     - armv7
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" -t "$CI_REGISTRY_IMAGE:$VERSION-armv7" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7"
+    - docker push "$CI_REGISTRY_IMAGE:$VERSION-armv7"
 
 
 
