--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
   # Override CI_PROJECT_PATH for using correct DOCKERHUB path
   CI_PROJECT_PATH: "fabianbees/openvpn-as"
   OPENVPNAS_VERSION: ""
-  VERSION: "2.9.1"
+  VERSION: "2.9.2"
   BUILD_DATE: ""
 
 # Build Stages
@@ -47,7 +47,7 @@ build:amd64:
   tags:
     - amd64
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
+    - docker build --pull --build-arg VERSION -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64" -t "$CI_REGISTRY_IMAGE:$VERSION-amd64" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-amd64"
     - docker push "$CI_REGISTRY_IMAGE:$VERSION-amd64"
 
@@ -61,7 +61,7 @@ build:arm64:
   tags:
     - arm64
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" -t "$CI_REGISTRY_IMAGE:$VERSION-arm64" .
+    - docker build --pull --build-arg VERSION -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64" -t "$CI_REGISTRY_IMAGE:$VERSION-arm64" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-arm64"
     - docker push "$CI_REGISTRY_IMAGE:$VERSION-arm64"
 
@@ -75,7 +75,7 @@ build:armv7:
   tags:
     - armv7
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" -t "$CI_REGISTRY_IMAGE:$VERSION-armv7" .
+    - docker build --pull --build-arg VERSION -t "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7" -t "$CI_REGISTRY_IMAGE:$VERSION-armv7" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_APPLICATION_TAG-armv7"
     - docker push "$CI_REGISTRY_IMAGE:$VERSION-armv7"
 
